# lab04

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
formatter_ex_lib/: formatter_ex.cpp
hello_world_application/: hello_world.cpp
solver_application/: equation.cpp
solver_lib/: solver.cpp
